--- a/desafiox/Desafio12/estilo/style.css
+++ b/desafiox/Desafio12/estilo/style.css
@@ -54,7 +54,11 @@ section {
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--fonte3);
-    font-size: 4vw;
+    font-size: 3.5vw;
+}
+
+section > p{
+    padding-bottom: 2em;
 }
 
 section.normal {
@@ -65,14 +69,27 @@ section.normal {
 section.imagens {
     background-color: rgb(78, 77, 77);
     color: white;
+    box-shadow: 6px 6px 13px 0px rgba(0, 0, 0, 0.46);
+    background-attachment: fixed;
 }
 
 section.imagens > p{
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.362);
+    background-color: rgba(0, 0, 0, 0.423);
+    text-shadow: 2px 2px 0px black;
 }
 
+section#img01 {
+background-image: url(../imagens/background001.jpg);
+background-position: right center;
+background-size: cover;
+}
+
+section#img02 {
+background-image: url(../imagens/background002.jpg);
+background-size: cover;
+}
 footer {
     background-color: black;
     color: white;
